--- a/src/app/pages/teacher-eval/coevaluation-coordinator/coevaluation-coordinator.component.html
+++ b/src/app/pages/teacher-eval/coevaluation-coordinator/coevaluation-coordinator.component.html
@@ -1,15 +1,14 @@
-<p>coevaluation-coordinator works!</p>
-<div class="p-shadow-24">
-    <div style="background-color:white;" class="p-fluid p-formgrid p-grid">
-      <div class="p-field p-col">
-        <h1>COEVALUACIÓN - COORDINADORES DE CARRERA - 2021 -1</h1>
+<div class="p-grid">
+  <div class="p-col-12 p-md-12 p-lg-12">
+    <h1>COEVALUACIÓN - COORDINADORES DE CARRERA - 2021 -1</h1>
+    <br>
         <P>INSTRUCCIONES:  Lea detenidamente cada uno de las preguntas que se mostrarán a continuación y seleccione su respuesta
              según el rango de ponderación del 1 al 4, tomando en cuenta que el rango mínimo es 1 y el máximo 4; en lo posible 
              responda a las preguntas de esta encuesta en base a las evidencias que le proporcionen las instancias correspondientes, 
              a fin de garantizar una evaluación objetiva.</P>
-      </div>
-    </div>
   </div>
+  </div>
+
   <p-toast></p-toast>
   <p-toast position="top-left" key="tl"></p-toast>
   <p-toast position="top-center" key="tc"></p-toast>
@@ -42,9 +41,9 @@
   </form>
   
   <center>
-    <button pButton type="button" routerLink="/teacher-eval/teacher-list" style="margin-left: 10px" label="Regresar"
+    <button pButton type="button"  (click)="coordinator()"  style="margin-left: 10px" label="Regresar"
       icon="pi pi-times"></button>
-    <button (click)="confirm()" type="submit"  pButton icon="pi pi-check" style="margin-left: 10px" label="Guardar"></button>
+    <button (click)="confirm();" type="submit"  pButton icon="pi pi-check" style="margin-left: 10px" label="Guardar"></button>
     </center>
   <p-confirmDialog #cd [style]="{width: '50vw'}">
     <ng-template pTemplate="header">
@@ -52,6 +51,6 @@
     </ng-template>
     <ng-template pTemplate="footer">
       <button type="button" pButton icon="pi pi-times" label="No" (click)="cd.reject()"></button>
- <button type="button" pButton icon="pi pi-check" label="Yes" (click)="cd.accept(); getCheckSelect()"></button>
+ <button type="button" pButton icon="pi pi-check" label="Yes" (click)="cd.accept(); getCheckSelect();"></button>
     </ng-template>
   </p-confirmDialog>
