rutas y listas ok

--- a/src/app/pages/teacher-eval/coevaluation-coordinator-area/coevaluation-coordinator-area.component.html
+++ b/src/app/pages/teacher-eval/coevaluation-coordinator-area/coevaluation-coordinator-area.component.html
@@ -1,6 +1,6 @@
 <div class="p-grid">
   <div class="p-col-12 p-md-12 p-lg-12">
-    <h1>COEVALUACION - COORDINADORES DE ÁREA, UNIDAD O DESIGNADOS POR EL OCS 2021-1</h1>
+    <h1>COEVALUACIÓN - COORDINADORES DE ÁREA, UNIDAD O DESIGNADOS POR EL OCS 2021-1</h1>
     <br>
     <P>INSTRUCCIONES:  Lea detenidamente cada uno de las preguntas que se mostrarán a continuación y seleccione su respuesta
          según el rango de ponderación del 1 al 4, tomando en cuenta que el rango mínimo es 1 y el máximo 4; en lo posible 
