--- a/src/app/pages/teacher-eval/evaluation/evaluation.component.html
+++ b/src/app/pages/teacher-eval/evaluation/evaluation.component.html
@@ -40,7 +40,7 @@
                 <div class="service-icon" >      
                     <i class="pi pi-list" style="font-size: 3rem" (click)="coevaluation()" ></i>
                         </div>
-                        <h3 class="service-title">COEVALUACION COORDINADORES DE ÁREA, 
+                        <h3 class="service-title">COEVALUACIÓN COORDINADORES DE ÁREA, 
                             UNIDAD O DESIGNADOS POR EL OCS
                         </h3>
                     </div> 
