--- a/src/app/pages/teacher-eval/result/result.component.html
+++ b/src/app/pages/teacher-eval/result/result.component.html
@@ -53,11 +53,11 @@
               <div class="p-fluid p-formgrid p-grid ">
                 <div class="p-col-6 ">
                   <p style="text-align: center;  font-size: medium; ">{{item.result | number}}</p>
-                  <p style="text-align: center;  font-size: medium;">Resultado </p>
+                  <p style="text-align: center;  font-size: medium;">Nota Obtenida </p>
                 </div>
                 <div class="p-col-6">
                   <p style="text-align: center; font-size: medium;">{{ item.percentage | number}}</p>
-                  <p style="text-align: center; font-size: medium;">Equivalencia</p>
+                  <p style="text-align: center; font-size: medium;">Equivalencia %</p>
                 </div>
               </div>
             </p-card>
