--- a/src/app/pages/teacher-eval/teacher-list-evaluation/teacher-list-evaluation.component.html
+++ b/src/app/pages/teacher-eval/teacher-list-evaluation/teacher-list-evaluation.component.html
@@ -20,12 +20,14 @@
 <p-table [value]="student.maestros">
     <ng-template pTemplate="header">
         <tr>
+            <th style="width: 4%">N°</th>
             <th>LISTA DOCENTES</th>
-            <th>TIPO DE EVALUACIÓN </th>
+            <th>EVALUACIÓN-DOCENTE </th>
         </tr>
     </ng-template>
     <ng-template pTemplate="body"  >
         <tr  *ngFor="let maestro of teachers" ngModel=[teacher] ngDefaultControl>
+            <td class="w-55">{{maestro.id}}</td>
             <td>{{maestro.name}}</td>
            <td><a (click)="seleccionar(maestro.id)"  class="button"> Evaluar </a></td>          
         </tr>
