--- a/src/app/pages/teacher-eval/teacher-list-tch/teacher-list-tch.component.html
+++ b/src/app/pages/teacher-eval/teacher-list-tch/teacher-list-tch.component.html
@@ -21,7 +21,7 @@
     <ng-template pTemplate="header">
         <tr>
             <th style="width: 4%">N°</th>
-            <th>LISTA DOCENTES</th>
+            <th>LISTA COORDINADORES</th>
         </tr>
     </ng-template>
     <ng-template pTemplate="body"  >
