--- a/src/app/pages/job-board/professional/experience/experience-list/experience-list.component.html
+++ b/src/app/pages/job-board/professional/experience/experience-list/experience-list.component.html
@@ -1,29 +1,31 @@
-<app-skeleton *ngIf="flagSkeletonExperiences"></app-skeleton>
+<app-skeleton *ngIf="flagSkeletonExperiences" [type]="'table'"></app-skeleton>
 <p-dialog [(visible)]="dialogUploadFiles" [style]="{width: '75%'}" header="Subir archivos" [modal]="true"
     styleClass="p-fluid" (onHide)="dialogUploadFiles=false">
     <app-upload-files (files)="upload($event,selectedExperience.id)"></app-upload-files>
 </p-dialog>
-
 <p-dialog [(visible)]="dialogViewFiles" [style]="{width: '75%'}" header="Subir Archivos" [modal]="true"
     styleClass="p-fluid" (onHide)="dialogViewFiles=false;resetPaginator()">
     <app-view-files (files)="upload($event,selectedExperience.id)" [filesIn]="files" (searchOut)="searchFiles($event)"
         [paginatorIn]="paginatorFiles" (paginatorOut)="getFiles($event)"></app-view-files>
 </p-dialog>
-
-<div class="card">
+<div class="card" [hidden]="flagSkeletonExperiences">
     <p-toolbar styleClass="p-mb-4">
         <ng-template pTemplate="left">
-            <button pButton pRipple label="Nuevo" icon="pi pi-plus" class="p-button-success p-button-rounded"
+            <button pButton pRipple label="Crear" icon="pi pi-plus" class="p-button-success p-button-rounded"
                 (click)="openNewFormExperience()"></button>
             <button pButton pRipple label="Eliminar" icon="pi pi-trash" class="p-button-danger p-button-rounded p-ml-2"
                 (click)="deleteExperiences()" [disabled]="!selectedExperiences || !selectedExperiences.length"></button>
         </ng-template>
-
+        <ng-template pTemplate="right">
+            <button pButton pRipple label="Refrescar" icon="pi pi-refresh" class="p-button-info"
+                (click)="paginatorOut.emit(paginatorIn)"></button>
+        </ng-template>
     </p-toolbar>
     <p-paginator [rows]="paginatorIn.per_page" [totalRecords]="paginatorIn.total" (onPageChange)="pageChange($event)">
     </p-paginator>
-    <p-table #dtExperience [value]="experiencesIn" [rows]="paginatorIn.per_page" [paginator]="false"
-        [(selection)]="selectedExperiences" [rowHover]="true" dataKey="id" styleClass="p-datatable-customers"
+    <p-table #dtExperience [value]="experiencesIn" [columns]="colsExperience" [rows]="paginatorIn.per_page"
+        [paginator]="false" [(selection)]="selectedExperiences" [rowHover]="true" dataKey="id"
+        styleClass="p-datatable-customers"
         currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [showCurrentPageReport]="true">
         <ng-template pTemplate="caption">
             <div class="p-d-flex p-flex-column p-flex-md-row p-jc-md-between table-header">
@@ -35,52 +37,31 @@
                 </span>
             </div>
         </ng-template>
-        <ng-template pTemplate="header">
+        <ng-template pTemplate="header" let-columns>
             <tr>
                 <th style="width: 3rem">
                     <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
                 </th>
-                <th pSortableColumn="employer">
-                    Empleador
-                    <p-sortIcon field="employere"></p-sortIcon>
-                </th>
-                <th pSortableColumn="position">
-                    Cargo
-                    <p-sortIcon field="position"></p-sortIcon>
-                </th>
-                <th pSortableColumn="start_date">
-                    Fecha
-                    <p-sortIcon field="start_date"></p-sortIcon>
-                </th>
-                <th pSortableColumn="is_working">
-                    Esta trabajando
-                    <p-sortIcon field="is_working"></p-sortIcon>
-                </th>
-                <th></th>
+                <!-- <th *ngFor="let col of columns" [pSortableColumn]="col.field">
+                    {{col.header}}
+                    <p-sortIcon [field]="col.field"></p-sortIcon>
+                </th> -->
             </tr>
         </ng-template>
-        <ng-template pTemplate="body" let-experience>
+        <ng-template pTemplate="body" let-columns="columns" let-Experience>
             <tr>
                 <td>
-                    <p-tableCheckbox [value]="experience"></p-tableCheckbox>
+                    <p-tableCheckbox [value]="Experience"></p-tableCheckbox>
+                </td>
+                <td *ngFor="let col of columns">
+                    {{Experience[col.field]?.name ? Experience[col.field]?.name : Experience[col.field]}}
                 </td>
                 <td>
-                    {{experience.employer}}
-                </td>
-                <td>
-                    {{experience.position}}
-                </td>
-                <td>
-                    {{experience.start_date}}
-                </td>
-                <td>
-                    {{experience.is_working}}
-                </td>
-                <td>
-                    <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-warning"
-                        (click)="openEditFormExperience(experience)"></button>
-                    <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-danger p-ml-2"
-                        (click)="deleteExperiences(experience)"></button>
+                    <button pButton pRipple type="button" id="btnEdit" pTooltip="Editar" icon="pi pi-pencil"
+                        class="p-button-rounded p-button-warning" (click)="openEditFormExperience(Experience)"></button>
+                    <button pButton pRipple type="button" id="btnDelete" pTooltip="Eliminar" icon="pi pi-trash"
+                        class="p-button-rounded p-button-danger p-ml-2"
+                        (click)="deleteExperiences(Experience)"></button>
                     <button pButton pRipple icon="pi pi-paperclip" class="p-button-rounded p-ml-2"
                         (click)="selectExperience(experience);openViewFilesExperience()"></button>
                 </td>
