--- a/src/app/pages/job-board/professional/language/language-list/language-list.component.html
+++ b/src/app/pages/job-board/professional/language/language-list/language-list.component.html
@@ -1,28 +1,30 @@
-<app-skeleton *ngIf="flagSkeletonLanguages"></app-skeleton>
+<app-skeleton *ngIf="flagSkeletonLanguages" [type]="'table'"></app-skeleton>
 <p-dialog [(visible)]="dialogUploadFiles" [style]="{width: '75%'}" header="Subir archivos" [modal]="true"
     styleClass="p-fluid" (onHide)="dialogUploadFiles=false">
     <app-upload-files (files)="upload($event,selectedLanguage.id)"></app-upload-files>
 </p-dialog>
-
 <p-dialog [(visible)]="dialogViewFiles" [style]="{width: '75%'}" header="Subir Archivos" [modal]="true"
     styleClass="p-fluid" (onHide)="dialogViewFiles=false;resetPaginator()">
     <app-view-files (files)="upload($event,selectedLanguage.id)" [filesIn]="files" (searchOut)="searchFiles($event)"
         [paginatorIn]="paginatorFiles" (paginatorOut)="getFiles($event)"></app-view-files>
 </p-dialog>
-
-<div class="card">
+<div class="card" [hidden]="flagSkeletonLanguages">
     <p-toolbar styleClass="p-mb-4">
         <ng-template pTemplate="left">
-            <button pButton pRipple label="Nuevo" icon="pi pi-plus" class="p-button-success p-button-rounded"
+            <button pButton pRipple label="Crear" icon="pi pi-plus" class="p-button-success p-button-rounded"
                 (click)="openNewFormLanguage()"></button>
             <button pButton pRipple label="Eliminar" icon="pi pi-trash" class="p-button-danger p-button-rounded p-ml-2"
                 (click)="deleteLanguages()" [disabled]="!selectedLanguages || !selectedLanguages.length"></button>
         </ng-template>
-
+        <ng-template pTemplate="right">
+            <button pButton pRipple label="Refrescar" icon="pi pi-refresh" class="p-button-info"
+                (click)="paginatorOut.emit(paginatorIn)"></button>
+        </ng-template>
     </p-toolbar>
-    <p-paginator [rows]="paginatorIn.per_page" [totalRecords]="paginatorIn.total" (onPageChange)="pageChange($event)">
+    <p-paginator [rows]="paginatorIn.per_page" [totalRecords]="paginatorIn.total"
+        (onPageChange)="paginateLanguage($event)">
     </p-paginator>
-    <p-table #dt [value]="languagesIn" [rows]="paginatorIn.per_page" [paginator]="false"
+    <p-table #dt [value]="languagesIn" [columns]="colsLanguage" [rows]="paginatorIn.per_page" [paginator]="false"
         [(selection)]="selectedLanguages" [rowHover]="true" dataKey="id" styleClass="p-datatable-customers"
         currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [showCurrentPageReport]="true">
         <ng-template pTemplate="caption">
@@ -35,54 +37,33 @@
                 </span>
             </div>
         </ng-template>
-        <ng-template pTemplate="header">
+        <ng-template pTemplate="header" let-columns>
             <tr>
                 <th style="width: 3rem">
                     <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
                 </th>
-                <th pSortableColumn="idiom">
-                    Idioma
-                    <p-sortIcon field="idiom"></p-sortIcon>
+                <th *ngFor="let col of columns" [pSortableColumn]="col.field">
+                    {{col.header}}
+                    <p-sortIcon [field]="col.field"></p-sortIcon>
                 </th>
-                <th pSortableColumn="written_level">
-                    Nivel de Escrito
-                    <p-sortIcon field="written_level"></p-sortIcon>
-                </th>
-                <th pSortableColumn="spoken_level">
-                    Nivel Hablado
-                    <p-sortIcon field="spoken_level"></p-sortIcon>
-                </th>
-                <th pSortableColumn="read_level">
-                    Nivel de Lectura
-                    <p-sortIcon field="read_level"></p-sortIcon>
-                </th>
-                <th></th>
             </tr>
         </ng-template>
-        <ng-template pTemplate="body" let-language>
+        <ng-template pTemplate="body" let-columns="columns" let-Language>
             <tr>
                 <td>
-                    <p-tableCheckbox [value]="language"></p-tableCheckbox>
+                    <p-tableCheckbox [value]="Language"></p-tableCheckbox>
+                </td>
+                <td *ngFor="let col of columns">
+                    {{Language[col.field]?.name ? Language[col.field]?.name : Language[col.field]}}
                 </td>
                 <td>
-                    {{language.idiom.name}}
-                </td>
-                <td>
-                    {{language.written_level.name}}
-                </td>
-                <td>
-                    {{language.spoken_level.name}}
-                </td>
-                <td>
-                    {{language.read_level.name}}
-                </td>
-                <td>
-                    <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-warning"
-                        (click)="openEditFormLanguage(language)"></button>
-                    <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-danger p-ml-2"
-                        (click)="deleteLanguages(language)"></button>
-                    <button pButton pRipple icon="pi pi-paperclip" class="p-button-rounded p-ml-2"
-                        (click)="selectLanguage(language);openViewFilesLanguage()"></button>
+                    <button pButton pRipple type="button" id="btnEdit" pTooltip="Editar" icon="pi pi-pencil"
+                        class="p-button-rounded p-button-warning" (click)="openEditFormLanguage(Language)"></button>
+                    <button pButton pRipple type="button" id="btnDelete" pTooltip="Eliminar" icon="pi pi-trash"
+                        class="p-button-rounded p-button-danger p-ml-2" (click)="deleteLanguages(Language)"></button>
+                    <button pButton pRipple type="button" id="btnFile" pTooltip="Archivo" icon="pi pi-paperclip"
+                        class="p-button-rounded p-ml-2"
+                        (click)="selectLanguage(Language);openViewFilesLanguage()"></button>
                 </td>
             </tr>
         </ng-template>
@@ -92,7 +73,4 @@
             </div>
         </ng-template>
     </p-table>
-
 </div>
-
-<!--</div>-->
