--- a/src/app/pages/job-board/professional/reference/reference-list/reference-list.component.html
+++ b/src/app/pages/job-board/professional/reference/reference-list/reference-list.component.html
@@ -1,27 +1,21 @@
-<app-skeleton *ngIf="flagSkeletonReferences"></app-skeleton>
-<p-dialog [(visible)]="dialogUploadFiles" [style]="{width: '75%'}" header="Subir archivos" [modal]="true"
-    styleClass="p-fluid" (onHide)="dialogUploadFiles=false">
-    <app-upload-files (files)="upload($event,selectedReference.id)"></app-upload-files>
-</p-dialog>
-
-<p-dialog [(visible)]="dialogViewFiles" [style]="{width: '75%'}" header="Subir Archivos" [modal]="true"
-    styleClass="p-fluid" (onHide)="dialogViewFiles=false;resetPaginator()">
-    <app-view-files (files)="upload($event,selectedReference.id)" [filesIn]="files" (searchOut)="searchFiles($event)"
-        [paginatorIn]="paginatorFiles" (paginatorOut)="getFiles($event)"></app-view-files>
-</p-dialog>
-
-<div class="card">
+<app-skeleton *ngIf="flagSkeletonReferences" [type]="'table'"></app-skeleton>
+<div class="card" [hidden]="flagSkeletonReferences">
     <p-toolbar styleClass="p-mb-4">
         <ng-template pTemplate="left">
-            <button pButton pRipple label="Nuevo" icon="pi pi-plus" class="p-button-success p-button-rounded"
+            <button pButton pRipple label="Crear" icon="pi pi-plus" class="p-button-success p-button-rounded"
                 (click)="openNewFormReference()"></button>
             <button pButton pRipple label="Eliminar" icon="pi pi-trash" class="p-button-danger p-button-rounded p-ml-2"
                 (click)="deleteReferences()" [disabled]="!selectedReferences || !selectedReferences.length"></button>
         </ng-template>
+        <ng-template pTemplate="right">
+            <button pButton pRipple label="Refrescar" icon="pi pi-refresh" class="p-button-info"
+                (click)="paginatorOut.emit(paginatorIn)"></button>
+        </ng-template>
     </p-toolbar>
-    <p-paginator [rows]="paginatorIn.per_page" [totalRecords]="paginatorIn.total" (onPageChange)="pageChange($event)">
+    <p-paginator [rows]="paginatorIn.per_page" [totalRecords]="paginatorIn.total"
+        (onPageChange)="paginateReference($event)">
     </p-paginator>
-    <p-table #dtReference [value]="referencesIn" [rows]="paginatorIn.per_page" [paginator]="false"
+    <p-table #dt [value]="referencesIn" [columns]="colsReference" [rows]="paginatorIn.per_page" [paginator]="false"
         [(selection)]="selectedReferences" [rowHover]="true" dataKey="id" styleClass="p-datatable-customers"
         currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [showCurrentPageReport]="true">
         <ng-template pTemplate="caption">
@@ -34,65 +28,36 @@
                 </span>
             </div>
         </ng-template>
-        <ng-template pTemplate="header">
+        <ng-template pTemplate="header" let-columns>
             <tr>
                 <th style="width: 3rem">
                     <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
                 </th>
-                <th pSortableColumn=" institution">
-                    Institución
-                    <p-sortIcon field=" institution"></p-sortIcon>
+                <th *ngFor="let col of columns" [pSortableColumn]="col.field">
+                    {{col.header}}
+                    <p-sortIcon [field]="col.field"></p-sortIcon>
                 </th>
-                <th pSortableColumn="position">
-                    Cargo
-                    <p-sortIcon field="position"></p-sortIcon>
-                </th>
-                <th pSortableColumn="contact_name">
-                    Nombre de Contacto
-                    <p-sortIcon field="contact_name"></p-sortIcon>
-                </th>
-                <th pSortableColumn="contact_phone">
-                    Teléfono de Contacto
-                    <p-sortIcon field="contact_phone"></p-sortIcon>
-                </th>
-                <th pSortableColumn="contact_email">
-                    Email de Contacto
-                    <p-sortIcon field="contact_email"></p-sortIcon>
-                </th>
-                <th></th>
             </tr>
         </ng-template>
-        <ng-template pTemplate="body" let-reference>
+        <ng-template pTemplate="body" let-columns="columns" let-Reference>
             <tr>
                 <td>
-                    <p-tableCheckbox [value]="reference"></p-tableCheckbox>
+                    <p-tableCheckbox [value]="Reference"></p-tableCheckbox>
+                </td>
+                <td *ngFor="let col of columns">
+                    {{Reference[col.field]?.name ? Reference[col.field]?.name : Reference[col.field]}}
                 </td>
                 <td>
-                    {{reference.institution.name}}
-                </td>
-                <td>
-                    {{reference.position}}
-                </td>
-                <td>
-                    {{reference.contact_name}}
-                </td>
-                <td>
-                    {{reference.contact_phone}}
-                </td>
-                <td>
-                    {{reference.contact_email}}
-                </td>
-                <td>
-                    <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-warning"
-                        (click)="openEditFormReference(reference)"></button>
-                    <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-danger p-ml-2"
-                        (click)="deleteReferences(reference)"></button>
+                    <button pButton pRipple type="button" id="btnEdit" pTooltip="Editar" icon="pi pi-pencil"
+                        class="p-button-rounded p-button-warning" (click)="openEditFormReference(Reference)"></button>
+                    <button pButton pRipple type="button" id="btnDelete" pTooltip="Eliminar" icon="pi pi-trash"
+                        class="p-button-rounded p-button-danger p-ml-2" (click)="deleteReferences(Reference)"></button>
                 </td>
             </tr>
         </ng-template>
         <ng-template pTemplate="summary">
             <div class="p-d-flex p-ai-center p-jc-between">
-                En total hay {{paginatorIn ? paginatorIn.total : 0 }} referencias.
+                En total hay {{referencesIn ? referencesIn.length : 0 }} referencias.
             </div>
         </ng-template>
     </p-table>
