--- a/src/app/pages/job-board/professional/skill/skill-list/skill-list.component.html
+++ b/src/app/pages/job-board/professional/skill/skill-list/skill-list.component.html
@@ -1,27 +1,21 @@
-<app-skeleton *ngIf="flagSkeletonListSkills"></app-skeleton>
-<p-dialog [(visible)]="dialogUploadFiles" [style]="{width: '75%'}" header="Subir archivos" [modal]="true"
-    styleClass="p-fluid" (onHide)="dialogUploadFiles=false">
-    <app-upload-files (files)="upload($event,selectedSkill.id)"></app-upload-files>
-</p-dialog>
-
-<p-dialog [(visible)]="dialogViewFiles" [style]="{width: '75%'}" header="Subir Archivos" [modal]="true"
-    styleClass="p-fluid" (onHide)="dialogViewFiles=false;resetPaginator()">
-    <app-view-files (files)="upload($event,selectedSkill.id)" [filesIn]="files" (searchOut)="searchFiles($event)"
-        [paginatorIn]="paginatorFiles" (paginatorOut)="getFiles($event)"></app-view-files>
-</p-dialog>
-
-<div class="card">
+<app-skeleton *ngIf="flagSkeletonListSkills" [type]="'table'"></app-skeleton>
+<div class="card" [hidden]="flagSkeletonListSkills">
     <p-toolbar styleClass="p-mb-4">
         <ng-template pTemplate="left">
-            <button pButton pRipple label="Nuevo" icon="pi pi-plus" class="p-button-success p-button-rounded"
+            <button pButton pRipple label="Crear" icon="pi pi-plus" class="p-button-success p-button-rounded"
                 (click)="openNewFormSkill()"></button>
             <button pButton pRipple label="Eliminar" icon="pi pi-trash" class="p-button-danger p-button-rounded p-ml-2"
                 (click)="deleteSkills()" [disabled]="!selectedSkills || !selectedSkills.length"></button>
         </ng-template>
+        <ng-template pTemplate="right">
+            <button pButton pRipple label="Refrescar" icon="pi pi-refresh" class="p-button-info"
+                (click)="paginatorOut.emit(paginatorIn)"></button>
+        </ng-template>
     </p-toolbar>
-    <p-paginator [rows]="paginatorIn.per_page" [totalRecords]="paginatorIn.total" (onPageChange)="pageChange($event)">
+    <p-paginator [rows]="paginatorIn.per_page" [totalRecords]="paginatorIn.total"
+        (onPageChange)="paginateSkill($event)">
     </p-paginator>
-    <p-table #dtSkill [value]="skillsIn" [rows]="paginatorIn.per_page" [paginator]="false"
+    <p-table #dtSkill [value]="skillsIn" [columns]="colsSkill" [rows]="paginatorIn.per_page" [paginator]="false"
         [(selection)]="selectedSkills" [rowHover]="true" dataKey="id" styleClass="p-datatable-customers"
         currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [showCurrentPageReport]="true">
         <ng-template pTemplate="caption">
@@ -34,44 +28,36 @@
                 </span>
             </div>
         </ng-template>
-        <ng-template pTemplate="header">
+        <ng-template pTemplate="header" let-columns>
             <tr>
                 <th style="width: 3rem">
                     <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
                 </th>
-                <th pSortableColumn="type">
-                    Tipo
-                    <p-sortIcon field="type"></p-sortIcon>
+                <th *ngFor="let col of columns" [pSortableColumn]="col.field">
+                    {{col.header}}
+                    <p-sortIcon [field]="col.field"></p-sortIcon>
                 </th>
-                <th pSortableColumn="description">
-                    Descripción
-                    <p-sortIcon field="description"></p-sortIcon>
-                </th>
-                <th></th>
             </tr>
         </ng-template>
-        <ng-template pTemplate="body" let-Skill>
+        <ng-template pTemplate="body" let-columns="columns" let-Skill>
             <tr>
                 <td>
                     <p-tableCheckbox [value]="Skill"></p-tableCheckbox>
                 </td>
-                <td>
-                    {{Skill.type.name}}
+                <td *ngFor="let col of columns">
+                    {{Skill[col.field]?.name ? Skill[col.field]?.name : Skill[col.field]}}
                 </td>
                 <td>
-                    {{Skill.description}}
-                </td>
-                <td>
-                    <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-warning"
-                        (click)="openEditFormSkill(skill)"></button>
-                    <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-danger p-ml-2"
-                        (click)="deleteSkills(skill)"></button>
+                    <button pButton pRipple type="button" id="btnEdit" pTooltip="Editar" icon="pi pi-pencil"
+                        class="p-button-rounded p-button-warning" (click)="openEditFormSkill(Skill)"></button>
+                    <button pButton pRipple type="button" id="btnDelete" pTooltip="Eliminar" icon="pi pi-trash"
+                        class="p-button-rounded p-button-danger p-ml-2" (click)="deleteSkills(Skill)"></button>
                 </td>
             </tr>
         </ng-template>
         <ng-template pTemplate="summary">
             <div class="p-d-flex p-ai-center p-jc-between">
-                En total hay {{paginatorIn ? paginatorIn.total : 0 }} Skill.
+                En total hay {{paginatorIn ? paginatorIn.total : 0 }} Habilidades.
             </div>
         </ng-template>
     </p-table>
