--- a/src/app/pages/job-board/professional/skill/skill-form/skill-form.component.html
+++ b/src/app/pages/job-board/professional/skill/skill-form/skill-form.component.html
@@ -1,29 +1,33 @@
 {{formSkillIn.value|json}}
-<p-toast></p-toast>
+
 <p-card>
   <div class="p-fluid">
     <form [formGroup]="formSkillIn" (ngSubmit)="onSubmit()">
-      <div class="p-field p-xl-12 p-lg-6 p-md-6 p-sm-15">
-        <label for="type">
-          <i class="p-error">*</i>Tipo:
-          <i *ngIf="typeField.valid" class="pi pi-check-circle icon-valid"></i>
-          <i *ngIf="typeField.invalid && (typeField.touched || typeField.dirty)"
-            class="pi pi-times-circle icon-invalid"></i>
-        </label>
-        <p-dropdown id="type" [options]="types" formControlName="type" optionLabel="name" [filter]="true"
-          filterBy="name" placeholder="Seleccione...">
-          <ng-template pTemplate="selectedtype">
-            <div class="country-type country-type-value" *ngIf="typeField.value">
-              <div>{{type.name}}</div>
-            </div>
-          </ng-template>
-          <ng-template let-type pTemplate="type">
-            <div class="country-type">
-              <div>{{type.name}}</div>
-            </div>
-          </ng-template>
-        </p-dropdown>
-      </div>
+      <div class="p-formgrid p-grid">
+
+          <div class="p-field p-xl-6 p-lg-6 p-md-6 p-sm-12">
+            <label for="type">
+              <i class="p-error">*</i> Tipo:
+              <i *ngIf="typeField.valid" class="pi pi-check-circle icon-valid"></i>
+              <i *ngIf="typeField.invalid && (typeField.touched || typeField.dirty)"
+                class="pi pi-times-circle icon-invalid"></i>
+            </label>
+            <p-dropdown id="type" [options]="types" formControlName="type" optionLabel="name" [filter]="true"
+              filterBy="name" placeholder="Seleccione...">
+              <ng-template pTemplate="selectedtype">
+                <div class="country-type country-type-value" *ngIf="typeField.value">
+                  <div>{{type.name}}</div>
+                </div>
+              </ng-template>
+              <ng-template let-type pTemplate="type">
+                <div class="country-type">
+                  <div>{{type.name}}</div>
+                </div>
+              </ng-template>
+            </p-dropdown>
+          </div>
+        </div>
+      
       <div class="p-field">
         <label for="description">
           <i class="p-error">*</i> Descripción:
